# hmmlearn-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: casino.rs  gaussian_hmm.rs
src/: cluster.rs  error.rs  kl.rs  lib.rs  linalg.rs  special.rs  testutil.rs  util.rs
src/core/: algorithms.rs  emission.rs  fitted.rs  hmm.rs  inference.rs  mod.rs  monitor.rs  params.rs
src/covariance/: mod.rs  store.rs  types.rs  validate.rs
src/models/: categorical.rs  gaussian.rs  gmm.rs  mod.rs  multinomial.rs  poisson.rs
src/models/variational/: categorical.rs  gaussian.rs  mod.rs
src/rng/: choice.rs  discrete.rs  gamma.rs  gauss.rs  golden.rs  mod.rs  mt19937.rs  uniform.rs
src/stats/: mod.rs  mvn.rs
tools/: gen_rng_golden.py
